# sphinx-click

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BUILD.bazel  REPO.bazel  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
docs/: changelog.rst  conf.py  usage.rst
releasenotes/notes/: drop-python-38-39-0da4002e198b0e4b.yaml  print-usage-c83518ec412eca7c.yaml
sphinx_click/: ext.py
tests/: test_extension.py  test_formatter.py
